[workspace]
resolver = "2"
members = [
    "rust/libltntstools-mpegts_to_s3",
    "rust/libltntstools-sys-mpegts_to_s3",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>",
]

[workspace.dependencies]
anyhow = "1.0.86"
libc = "0.2.155"
