[package]
name = "libltntstools-mpegts_to_s3"
description = "libltntstools"
keywords = ["mpegts", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "LGPL-V2.1"
homepage = "https://github.com/LTNGlobal-opensource/libltntstools"
repository = "https://github.com/LTNGlobal-opensource/libltntstools"
version = "0.1.0"
edition = "2021"
authors = [
    "Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>",
]

[dependencies]
log = "0.4.22"
sys = { package = "libltntstools-sys-mpegts_to_s3", path = "../libltntstools-sys-mpegts_to_s3" }
anyhow = "1.0.86"
libc = "0.2.155"
