[package]
name = "libltntstools-sys-mpegts_to_s3"
description = "libltntstools-sys"
keywords = ["mpegts", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "LGPL-V2.1"
homepage = "https://github.com/LTNGlobal-opensource/libltntstools"
repository = "https://github.com/LTNGlobal-opensource/libltntstools"
version = "0.1.0"
edition = "2021"
authors = [
    "Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>",
]
links = "ltntstools"
build = "build.rs"

[dependencies]
libc = "0.2.155"
pcap = "2.0.0"

[build-dependencies]
anyhow = "1.0.86"
bindgen = { version = "0.69.4", default-features = false, features = ["runtime"] }
cc = "1.1.14"
doxygen-rs = "0.4.2"
pkg-config = "0.3.30"
