[package]
name = "libltntstools-sys-mpegts_to_s3"
version = "0.1.0"
description = "libltntstools-sys"
keywords = ["mpegts", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/LTNGlobal-opensource/libltntstools"
repository = "https://github.com/LTNGlobal-opensource/libltntstools"
authors = ["stoth"]

version.workspace = true
edition.workspace = true
authors.workspace = true
links = "ltntstools"
build = "build.rs"

[dependencies]
libc.workspace = true
pcap = "2.0.0"

[build-dependencies]
anyhow.workspace = true
bindgen = { version = "0.69.4", default-features = false, features = ["runtime"] }
cc = "1.1.14"
doxygen-rs = "0.4.2"
pkg-config = "0.3.30"
