[package]
name = "libltntstools-mpegts_to_s3"
description = "libltntstools"
keywords = ["mpegts", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "LGPL-V2.1"
homepage = "https://github.com/LTNGlobal-opensource/libltntstools"
repository = "https://github.com/LTNGlobal-opensource/libltntstools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
log = "0.4.22"
sys = { package = "libltntstools-sys-mpegts_to_s3", path = "../libltntstools-sys" }
